--- a/src/myBib.bib
+++ b/src/myBib.bib
@@ -1232,6 +1232,17 @@
   file = {/home/ajensen123@ad.ufl.edu/references/docs/Boyd_Vandenberghe-2004_Convex optimization/Boyd and Vandenberghe - 2004 - Convex optimization.pdf}
 }
 
+@article{bradskiOpenCVLibrary2000,
+  title = {The {{OpenCV}} Library},
+  author = {Bradski, G.},
+  year = {2000},
+  journal = {Dr. Dobb's Journal of Software Tools},
+  citeulike-article-id = {2236121},
+  posted-at = {2008-01-15 19:21:54},
+  priority = {4},
+  keywords = {bibtex-import}
+}
+
 @article{brainerdXrayReconstructionMoving2010,
   title = {X-Ray Reconstruction of Moving Morphology ({{XROMM}}): Precision, Accuracy and Applications in Comparative Biomechanics Research},
   shorttitle = {X-Ray Reconstruction of Moving Morphology ({{XROMM}})},
@@ -5750,6 +5761,22 @@
   file = {/home/ajensen123@ad.ufl.edu/references/docs/Lee-2018_What’s New in Adult Reconstructive Knee Surgery/Lee - 2018 - What’s New in Adult Reconstructive Knee Surgery.pdf}
 }
 
+@misc{legerMengerCurvatureRectifiability1999,
+  title = {Menger Curvature and Rectifiability},
+  author = {L{\'e}ger, J. C.},
+  year = {1999},
+  month = apr,
+  number = {arXiv:math/9905212},
+  eprint = {math/9905212},
+  publisher = {{arXiv}},
+  urldate = {2024-01-10},
+  abstract = {For a Borel set E in R\^n, the total Menger curvature of E, or c(E), is the integral over E\^3 (with respect to 1-dimensional Hausdorff measure in each factor of E) of c(x,y,z)\^2, where 1/c(x,y,z) is the radius of the circle passing through three points x, y, and z in E. Let H\^1(X) denote the 1-dimensional Hausdorff measure of a set X. A Borel set E in R\^n is purely unrectifiable if for any Lipschitz function gamma from R to R\^n, H\^1(E cap gamma(R)) = 0. It is said to be rectifiable if there exists a countable family of Lipschitz functions gamma\_i from R to R\^n such that H\^1(E - union gamma\_i(R)) = 0. It may be seen from this definition that any 1-set E (that is, E Borel and 0},
+  archiveprefix = {arxiv},
+  langid = {english},
+  keywords = {Mathematics - Metric Geometry},
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Léger-1999_Menger curvature and rectifiability/Léger - 1999 - Menger curvature and rectifiability.pdf}
+}
+
 @article{levenbergMethodSolutionCertain1944,
   title = {A Method for the Solution of Certain Non-Linear Problems in Least Squares},
   author = {Levenberg, Kenneth},
@@ -9341,6 +9368,19 @@
   urldate = {2023-11-08},
   langid = {english},
   file = {/home/ajensen123@ad.ufl.edu/references/docs/Šukilović-2015_Curvature based shape detection/Šukilović - 2015 - Curvature based shape detection.pdf}
+}
+
+@article{suzukiTopologicalStructuralAnalysis1985,
+  title = {Topological {{Structural Analysis}} of {{Digitized Binary Images}} by {{Border Following}}},
+  author = {Suzuki, Satoshi and Abe, Keichi},
+  year = {1985},
+  journal = {Computer Vision, Graphics, and Image Processing},
+  volume = {30},
+  pages = {32--46},
+  doi = {10.1016/0734-189X(85)90016-7},
+  abstract = {Two border following algorithms are proposed for the topological analysis of digitized binary images. The first one determines the surroundness relations among the borders of a binary image. Since the outer borders and the hole borders have a one-to-one correspondence to the connected components of l-pixels and to the holes, respectively, the proposed algorithm yields a representation of a binary image, from which one can extract some sort of features without reconstructing the image. The second algorithm, which is a modified version of the first, follows only the outermost borders (i.e., the outer borders which are not surrounded by holes). These algorithms can be effectively used in component counting, shrinking, and topological structural analysis of binary images, when a sequential digital computer is used.},
+  langid = {english},
+  file = {/home/ajensen123@ad.ufl.edu/references/docs/Suzuki_Abe-1985_Topological Structural Analysis of Digitized Binary Images by Border Following/Suzuki and Abe - 1985 - Topological Structural Analysis of Digitized Binar.pdf}
 }
 
 @article{sveierPoseEstimationUsing2018,
